--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "description": "Minimal set of code to write a GraphQL server with Apollo graphql-tools",
   "scripts": {
-    "start": "nodemon ./server.js --exec babel-node",
+    "start": "env-cmd config/security.env.local nodemon ./server.js --ignore app --exec babel-node",
     "update-schema": "babel-node utils/updateSchema.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint ."
@@ -27,35 +27,38 @@
   },
   "homepage": "https://github.com/apollostack/apollo-starter-kit#readme",
   "dependencies": {
-    "babel-loader": "^6.2.10",
-    "babel-relay-plugin": "^0.10.0",
+    "babel-loader": "6.2.5",
+    "babel-relay-plugin": "0.9.3",
     "body-parser": "^1.15.2",
     "cors": "^2.8.0",
+    "env-cmd": "^2.1.0",
     "express": "4.14.0",
     "graphql": "^0.8.1",
-    "graphql-relay": "^0.4.4",
+    "graphql-relay": "^0.4.3",
     "graphql-server-express": "^0.4.2",
     "graphql-subscriptions": "^0.2.0",
     "graphql-tools": "^0.8.0",
-    "html-webpack-plugin": "^2.26.0",
-    "lodash": "^4.15.0",
-    "react": "^15.4.1",
-    "react-dom": "^15.4.1",
-    "react-relay": "^0.10.0",
+    "html-webpack-plugin": "^2.21.0",
+    "lodash": "^4.13.1",
+    "react": "^15.3.1",
+    "react-dom": "^15.3.1",
+    "react-relay": "^0.9.3",
+    "react-router": "^2.7.0",
+    "react-router-relay": "^0.13.5",
     "subscriptions-transport-ws": "^0.3.1",
-    "webpack": "^1.14.0",
-    "webpack-dev-middleware": "^1.9.0",
+    "webpack": "=2.1.0-beta.22",
+    "webpack-dev-middleware": "^1.6.1",
     "webpack-dev-server": "^1.16.2",
-    "webpack-hot-middleware": "^2.15.0"
+    "webpack-hot-middleware": "^2.11.0"
   },
   "devDependencies": {
-    "babel-cli": "6.16.0",
+    "babel-cli": "^6.16.0",
     "babel-core": "^6.17.0",
     "babel-eslint": "^7.0.0",
     "babel-plugin-inline-import": "^2.0.1",
-    "babel-polyfill": "6.16.0",
+    "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "6.16.0",
-    "babel-preset-react": "^6.5.0",
+    "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "6.16.0",
     "eslint": "^3.8.1",
     "eslint-config-airbnb": "^12.0.0",
